java11: resolve or suppress deprecation warnings